Fix the Indentation errors
The indentation errors were fixed

--- a/patterns/cards/basic-cards.html
+++ b/patterns/cards/basic-cards.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Image Cards</title>
+  <title>Basic Card</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -16,18 +16,18 @@
 <body>
   <div class="basic-card">
     <a href="#">
-    <div>
-      <img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
-    </div>
-    <div class="grid pad-top-half">
-      <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-        <p class="milli bold black">VANILLA SWEATER</p>
+      <div>
+        <img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
       </div>
-      <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-        <p class="milli bold right black">$32</p>
+      <div class="grid pad-top-half">
+        <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          <p class="milli bold black">VANILLA SWEATER</p>
+        </div>
+        <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          <p class="milli bold right black">$32</p>
+        </div>
       </div>
-    </div>
-  </a>
+    </a>
   </div>
 </body>
 </html>
