--- a/patterns/footer/main-footer.html
+++ b/patterns/footer/main-footer.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Banners</title>
+  <title>Mian Footer</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -15,17 +15,31 @@
 
   <div class="footer">
     <div class="links">
-      <ul class="list-group block">
-        <li class="left block gutter milli"><p>About</p></li>
-        <li class="left block gutter milli"><p>Terms & Conditions</p></li>
-        <li class="left block gutter milli"><p>Privacy Policy</p></li>
-        <li class="right gutter milli"><p>Shipping info</p></li>
-        <li class="right gutter milli"><p>Returns/Exchanges</p></li>
-        <li class="right gutter milli"><p>Contact</p></li>
+      <ul class="block list-group">
+        <li class="left block gutter milli">
+          <a href="#">About</a>
+        </li>
+        <li class="left block gutter milli">
+          <a href="#">Terms & Conditions</a>
+        </li>
+        <li class="left block gutter milli">
+          <a href="#">Privacy Policy</a>
+        </li>
+        <li class="right gutter milli">
+          <a href="#">Shipping info</a>
+        </li>
+        <li class="right gutter milli">
+          <a href="#">Returns/Exchanges</a>
+        </li>
+        <li class="right gutter milli">
+          <a href="#">Contact</a>
+        </li>
       </ul>
     </div>
-    <a class="text-center milli block" href="index.html">www.junktrunk.ca</a>
+    <div class="copyright">
+    <a class="block text-center milli" href="index.html">www.junktrunk.ca</a>
     <p class="text-center micro">©JunkTrunk2018</p>
+  </div>
   </div>
 
 </body>
