--- a/patterns/header/header.html
+++ b/patterns/header/header.html
@@ -19,7 +19,7 @@
     <div class="logo">
       <div class="absolute pin-tl">
         <a href="#">
-    <img class="island main-logo" src="../../images/logo-64.svg">
+          <img class="island main-logo" src="../../images/logo-64.svg" alt="">
         </a>
       </div>
     </div>
