--- a/patterns/navigation/filter.html
+++ b/patterns/navigation/filter.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Product page banner</title>
+  <title>Filter</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -23,32 +23,31 @@
         <div class="filter-option-1 island guuter-double">
           <a class="drop-button" href="#">Filter 1</a>
           <div class="dropdown-content">
-            <a href="#" aria-describedby="option 1">option-1</a>
-            <a href="#" aria-describedby="option 2">option-2</a>
-            <a href="#" aria-describedby="option 3">option-3</a>
+            <a href="#" aria-label="option 1">option-1</a>
+            <a href="#" aria-label="option 2">option-2</a>
+            <a href="#" aria-label="option 3">option-3</a>
           </div>
         </div>
         <div class="filter-option-2 island guuter-double">
           <a class="drop-button" href="#">Filter 2</a>
           <div class="dropdown-content">
-            <a href="#" aria-describedby="option 1">option-1</a>
-            <a href="#" aria-describedby="option 2">option-2</a>
-            <a href="#" aria-describedby="option 3">option-3</a>
+            <a href="#" aria-label="option 1">option-1</a>
+            <a href="#" aria-label="option 2">option-2</a>
+            <a href="#" aria-label="option 3">option-3</a>
           </div>
         </div>
         <div class="filter-option-3 island guuter-double">
           <a class="drop-button" href="#">Filter 3</a>
           <div class="dropdown-content">
-            <a href="#" aria-describedby="option 1">option-1</a>
-            <a href="#" aria-describedby="option 2">option-2</a>
-            <a href="#" aria-describedby="option 3">option-3</a>
+            <a href="#" aria-label="option 1">option-1</a>
+            <a href="#" aria-label="option 2">option-2</a>
+            <a href="#" aria-label="option 3">option-3</a>
           </div>
         </div>
       </div>
     </div>
 
     <hr class="push-quarter">
-
 
   </section>
 </body>
