--- a/patterns/navigation/footer-nav.html
+++ b/patterns/navigation/footer-nav.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Product page banner</title>
+  <title>Footer Navigation</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -17,13 +17,13 @@
   <section class="secondary-nav">
 
     <div class="s-nav text-center">
-      <a class="island-half" href="#" aria-describedby="link">Link 1</a>
-      <a class="island-half" href="#" aria-describedby="link">Link 2</a>
-      <a class="island-half" href="#" aria-describedby="link">Link 3</a>
-      <a class="island-half" href="#" aria-describedby="link">Link 4</a>
-      <a class="island-half" href="#" aria-describedby="link">Link 5</a>
-      <a class="island-half" href="#" aria-describedby="link">Link 6</a>
-      <a class="island-half" href="#" aria-describedby="link">Link 7</a>
+      <a class="island-half" href="#" aria-label="link1">Link 1</a>
+      <a class="island-half" href="#" aria-label="link2">Link 2</a>
+      <a class="island-half" href="#" aria-label="link3">Link 3</a>
+      <a class="island-half" href="#" aria-label="link4">Link 4</a>
+      <a class="island-half" href="#" aria-label="link5">Link 5</a>
+      <a class="island-half" href="#" aria-label="link6">Link 6</a>
+      <a class="island-half" href="#" aria-label="link7">Link 7</a>
     </div>
 
   </section>
