--- a/patterns/sections/collection.html
+++ b/patterns/sections/collection.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Collections banner</title>
+  <title>Collections section</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -15,7 +15,7 @@
 
 <body>
 
-  <div class="collection-banner" href="#">
+  <div class="collection-banner">
     <div class="relative">
       <h2 class="absolute collection-text">Cheese collection</h2>
       <div class="collection-img">
@@ -32,6 +32,7 @@
         </div>
       </div>
     </div>
+  </div>
 
 </body>
 
