--- a/patterns/sections/colour-picker.html
+++ b/patterns/sections/colour-picker.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Product collections page banner</title>
+  <title>Colour picker Section</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -19,10 +19,10 @@
   <section class="colour">
     <div class="grid text-center push-none">
       <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-        <a class="bold micro push-quarter black">BROWN</a>
+        <a class="bold micro push-quarter black" href="#">BROWN</a>
       </div>
       <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-        <a class="bold micro push-quarter black">WHITE</a>
+        <a class="bold micro push-quarter black" href="#">WHITE</a>
       </div>
     </div>
   </section>
