--- a/patterns/sections/reviews.html
+++ b/patterns/sections/reviews.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Product page banner</title>
+  <title>Reviews SEction</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -20,7 +20,7 @@
     <hr class="push-quarter">
 
     <div class="push-double">
-      <div class="one-five-star" aria-describedby="Rating 1/5 stars">
+      <div class="one-five-star" aria-label="Rating 1/5 stars">
         <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
         <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
         <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
@@ -30,7 +30,7 @@
     </div>
 
     <div class="push-double">
-      <div class="two-five-star" aria-describedby="Rating 2/5 stars">
+      <div class="two-five-star" aria-label="Rating 2/5 stars">
         <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
         <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
         <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
@@ -40,7 +40,7 @@
     </div>
 
     <div class="push-double">
-      <div class="three-five-star" aria-describedby="Rating 3/5 stars">
+      <div class="three-five-star" aria-label="Rating 3/5 stars">
         <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
         <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
         <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
@@ -49,7 +49,7 @@
       </div>
     </div>
 
-    <div class="push-double" aria-describedby="Rating 4/5 stars">
+    <div class="push-double" aria-label="Rating 4/5 stars">
       <div class="four-five-star">
         <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
         <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
@@ -59,7 +59,7 @@
       </div>
     </div>
 
-    <div class="push-double" aria-describedby="Rating 5/5 stars">
+    <div class="push-double" aria-label="Rating 5/5 stars">
       <div class="five-five-star">
         <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
         <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
@@ -69,7 +69,7 @@
       </div>
     </div>
 
-    <div class="push-double" aria-describedby="Rating 0/5 stars">
+    <div class="push-double" aria-label="Rating 0/5 stars">
       <div class="zero-five-star">
         <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
         <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
