--- a/index.html
+++ b/index.html
@@ -1270,29 +1270,31 @@ Use the footer pattern on all pages.</p>
               </button>
               <code><pre id="footer-main-footer-code-sample-copy-chunk">&lt;div class="footer"&gt;
   &lt;div class="links">
-    &lt;ul class="list-group block">
+    &lt;ul class="block list-group">
       &lt;li class="left block gutter milli">
-        &lt;p>About&lt;/p>
-      &lt;/li>
-      &lt;li class="left block gutter milli">
-        &lt;p>Terms &amp; Conditions&lt;/p>
+        &lt;a href="#">About&lt;/a>
       &lt;/li>
       &lt;li class="left block gutter milli">
-        &lt;p>Privacy Policy&lt;/p>
+        &lt;a href="#">Terms &amp; Conditions&lt;/a>
+      &lt;/li>
+      &lt;li class="left block gutter milli">
+        &lt;a href="#">Privacy Policy&lt;/a>
       &lt;/li>
       &lt;li class="right gutter milli">
-        &lt;p>Shipping info&lt;/p>
+        &lt;a href="#">Shipping info&lt;/a>
       &lt;/li>
       &lt;li class="right gutter milli">
-        &lt;p>Returns/Exchanges&lt;/p>
+        &lt;a href="#">Returns/Exchanges&lt;/a>
       &lt;/li>
       &lt;li class="right gutter milli">
-        &lt;p>Contact&lt;/p>
+        &lt;a href="#">Contact&lt;/a>
       &lt;/li>
     &lt;/ul>
   &lt;/div>
-  &lt;a class="text-center milli block" href="index.html">www.junktrunk.ca&lt;/a>
-  &lt;p class="text-center micro">&#xA9;JunkTrunk2018&lt;/p>
+  &lt;div class="copyright">
+    &lt;a class="block text-center milli" href="index.html">www.junktrunk.ca&lt;/a>
+    &lt;p class="text-center micro">&#xA9;JunkTrunk2018&lt;/p>
+  &lt;/div>
 &lt;/div>
 </pre></code>
             </div>
@@ -1360,13 +1362,15 @@ Use the footer pattern on all pages.</p>
               </button>
               <code><pre id="footer-subscribe-footer-code-sample-copy-chunk">&lt;div class="subscribe"&gt;
   &lt;form>
-    &lt;label for="email">Email&lt;/label>
-    &lt;input type="email" plaeholder="abc@gmail.com" id="email" required aria-describedby="email-error">
-    &lt;button class="btn" type="submit">Subscribe&lt;/button>
-    &lt;p class="error-message milli island-1-4 push-0" id="email-error">
-      &lt;i class="icon i-16">&lt;svg>&lt;use xlink:href="../../images/icons.svg#warning"/>&lt;/svg>&lt;/i>
-      &lt;span class="icon-label">Please provide a properly formatted email address&lt;/span>
-    &lt;/p>
+    &lt;div class="email">
+      &lt;label for="email">Email&lt;/label>
+      &lt;input type="email" id="email" required aria-describedby="email-error">
+      &lt;p class="error-message milli island-1-4 push-0" id="email-error">
+        &lt;i class="icon i-16">&lt;svg>&lt;use xlink:href="../../images/icons.svg#warning"/>&lt;/svg>&lt;/i>
+        &lt;span class="icon-label">Please provide a properly formatted email address&lt;/span>
+      &lt;/p>
+    &lt;/div>
+    &lt;button class="btn inline-block" type="submit">Subscribe&lt;/button>
   &lt;/form>
 &lt;/div>
 </pre></code>
@@ -1685,12 +1689,14 @@ It is generally used for account creation, log in, payment gateway access.</p>
                 </i>
               </button>
               <code><pre id="forms-email-code-sample-copy-chunk">&lt;form&gt;
-  &lt;label for="email">Email&lt;/label>
-  &lt;input type="email" id="email" required aria-describedby="email-error">
-  &lt;p class="error-message milli island-1-4 push-0" id="email-error">
-    &lt;i class="icon i-16">&lt;svg>&lt;use xlink:href="../../images/icons.svg#warning"/>&lt;/svg>&lt;/i>
-    &lt;span class="icon-label">Please provide a properly formatted email address&lt;/span>
-  &lt;/p>
+  &lt;div class="email">
+    &lt;label for="email">Email&lt;/label>
+    &lt;input type="email" id="email" required aria-describedby="email-error">
+    &lt;p class="error-message milli island-1-4 push-0" id="email-error">
+      &lt;i class="icon i-16">&lt;svg>&lt;use xlink:href="../../images/icons.svg#warning"/>&lt;/svg>&lt;/i>
+      &lt;span class="icon-label">Please provide a properly formatted email address&lt;/span>
+    &lt;/p>
+  &lt;/div>
 &lt;/form>
 </pre></code>
             </div>
@@ -2135,7 +2141,7 @@ Use the header pattern on all pages.</p>
   &lt;div class="logo">
     &lt;div class="absolute pin-tl">
       &lt;a href="#">
-    &lt;img class="island main-logo" src="../../images/logo-64.svg">
+          &lt;img class="island main-logo" src="../../images/logo-64.svg" alt="">
         &lt;/a>
     &lt;/div>
   &lt;/div>
@@ -2255,32 +2261,31 @@ It can be used in the product page, collections page to sort/filter brands, pric
       &lt;div class="filter-option-1 island guuter-double">
         &lt;a class="drop-button" href="#">Filter 1&lt;/a>
         &lt;div class="dropdown-content">
-          &lt;a href="#" aria-describedby="option 1">option-1&lt;/a>
-          &lt;a href="#" aria-describedby="option 2">option-2&lt;/a>
-          &lt;a href="#" aria-describedby="option 3">option-3&lt;/a>
+          &lt;a href="#" aria-label="option 1">option-1&lt;/a>
+          &lt;a href="#" aria-label="option 2">option-2&lt;/a>
+          &lt;a href="#" aria-label="option 3">option-3&lt;/a>
         &lt;/div>
       &lt;/div>
       &lt;div class="filter-option-2 island guuter-double">
         &lt;a class="drop-button" href="#">Filter 2&lt;/a>
         &lt;div class="dropdown-content">
-          &lt;a href="#" aria-describedby="option 1">option-1&lt;/a>
-          &lt;a href="#" aria-describedby="option 2">option-2&lt;/a>
-          &lt;a href="#" aria-describedby="option 3">option-3&lt;/a>
+          &lt;a href="#" aria-label="option 1">option-1&lt;/a>
+          &lt;a href="#" aria-label="option 2">option-2&lt;/a>
+          &lt;a href="#" aria-label="option 3">option-3&lt;/a>
         &lt;/div>
       &lt;/div>
       &lt;div class="filter-option-3 island guuter-double">
         &lt;a class="drop-button" href="#">Filter 3&lt;/a>
         &lt;div class="dropdown-content">
-          &lt;a href="#" aria-describedby="option 1">option-1&lt;/a>
-          &lt;a href="#" aria-describedby="option 2">option-2&lt;/a>
-          &lt;a href="#" aria-describedby="option 3">option-3&lt;/a>
+          &lt;a href="#" aria-label="option 1">option-1&lt;/a>
+          &lt;a href="#" aria-label="option 2">option-2&lt;/a>
+          &lt;a href="#" aria-label="option 3">option-3&lt;/a>
         &lt;/div>
       &lt;/div>
     &lt;/div>
   &lt;/div>
 
   &lt;hr class="push-quarter">
-
 
 &lt;/section>
 </pre></code>
@@ -2351,13 +2356,13 @@ Can be used in the footer.</p>
               <code><pre id="navigation-footer-nav-code-sample-copy-chunk">&lt;section class="secondary-nav"&gt;
 
   &lt;div class="s-nav text-center">
-    &lt;a class="island-half" href="#" aria-describedby="link">Link 1&lt;/a>
-    &lt;a class="island-half" href="#" aria-describedby="link">Link 2&lt;/a>
-    &lt;a class="island-half" href="#" aria-describedby="link">Link 3&lt;/a>
-    &lt;a class="island-half" href="#" aria-describedby="link">Link 4&lt;/a>
-    &lt;a class="island-half" href="#" aria-describedby="link">Link 5&lt;/a>
-    &lt;a class="island-half" href="#" aria-describedby="link">Link 6&lt;/a>
-    &lt;a class="island-half" href="#" aria-describedby="link">Link 7&lt;/a>
+    &lt;a class="island-half" href="#" aria-label="link1">Link 1&lt;/a>
+    &lt;a class="island-half" href="#" aria-label="link2">Link 2&lt;/a>
+    &lt;a class="island-half" href="#" aria-label="link3">Link 3&lt;/a>
+    &lt;a class="island-half" href="#" aria-label="link4">Link 4&lt;/a>
+    &lt;a class="island-half" href="#" aria-label="link5">Link 5&lt;/a>
+    &lt;a class="island-half" href="#" aria-label="link6">Link 6&lt;/a>
+    &lt;a class="island-half" href="#" aria-label="link7">Link 7&lt;/a>
   &lt;/div>
 
 &lt;/section>
@@ -2451,7 +2456,7 @@ Can be used in the footer.</p>
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="sections-collection-code-sample-copy-chunk">&lt;div class="collection-banner" href="#"&gt;
+              <code><pre id="sections-collection-code-sample-copy-chunk">&lt;div class="collection-banner"&gt;
   &lt;div class="relative">
     &lt;h2 class="absolute collection-text">Cheese collection&lt;/h2>
     &lt;div class="collection-img">
@@ -2532,10 +2537,10 @@ Can be used in the footer.</p>
               <code><pre id="sections-colour-picker-code-sample-copy-chunk">&lt;section class="colour"&gt;
   &lt;div class="grid text-center push-none">
     &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-      &lt;a class="bold micro push-quarter black">BROWN&lt;/a>
+      &lt;a class="bold micro push-quarter black" href="#">BROWN&lt;/a>
     &lt;/div>
     &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-      &lt;a class="bold micro push-quarter black">WHITE&lt;/a>
+      &lt;a class="bold micro push-quarter black" href="#">WHITE&lt;/a>
     &lt;/div>
   &lt;/div>
 &lt;/section>
@@ -2608,19 +2613,19 @@ Can be used in the footer.</p>
     &lt;div class="unit xs-1 s-1 m-1-2 l-1-2 island-half">
       &lt;h6 class="bold push-quarter text-center">VANILLA SWEATER&lt;/h6>
       &lt;p class="kilo bold text-center">$52&lt;/p>
-      &lt;section class="size">
+      &lt;div class="size">
         &lt;div class="grid text-center push-none">
           &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-            &lt;a class="bold micro push-quarter black">SMALL&lt;/a>
+            &lt;a class="bold micro push-quarter black" href="#">SMALL&lt;/a>
           &lt;/div>
           &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-            &lt;a class="bold micro push-quarter black">MEDIUM&lt;/a>
+            &lt;a class="bold micro push-quarter black" href="#">MEDIUM&lt;/a>
           &lt;/div>
           &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-            &lt;a class="bold micro push-quarter black">LARGE&lt;/a>
+            &lt;a class="bold micro push-quarter black" href="#">LARGE&lt;/a>
           &lt;/div>
           &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-            &lt;a class="bold micro push-quarter black">X-LARGE&lt;/a>
+            &lt;a class="bold micro push-quarter black" href="#">X-LARGE&lt;/a>
           &lt;/div>
         &lt;/div>
         &lt;div class="grid text-center push-none">
@@ -2628,27 +2633,27 @@ Can be used in the footer.</p>
             &lt;a class="micro push-quarter grey text-center" href="#">Size Guide&lt;/a>
           &lt;/div>
         &lt;/div>
-      &lt;/section>
-      &lt;section class="colour">
+      &lt;/div>
+      &lt;div class="colour">
         &lt;div class="grid text-center push-none">
           &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-            &lt;a class="bold micro push-quarter black">BROWN&lt;/a>
+            &lt;a class="bold micro push-quarter black" href="#">BROWN&lt;/a>
           &lt;/div>
           &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-            &lt;a class="bold micro push-quarter black">WHITE&lt;/a>
+            &lt;a class="bold micro push-quarter black" href="#">WHITE&lt;/a>
           &lt;/div>
         &lt;/div>
-      &lt;/section>
-      &lt;section class="quantity">
+      &lt;/div>
+      &lt;div class="quantity">
         &lt;hr class="pad-top-quarter push-half">
         &lt;p class="kilo bold text-center push-half">&#xA0; - &#xA0;&#xA0;&#xA0; 1 &#xA0;&#xA0;&#xA0; +&#xA0;&lt;/p>
         &lt;hr class="push-half">
         &lt;div class="text-center push">
           &lt;a class="btn milli bold" href="#">ADD TO CART&lt;/a>
         &lt;/div>
-      &lt;/section>
+      &lt;/div>
 
-      &lt;section class="reviews">
+      &lt;div class="reviews">
         &lt;h6 class="bold push-quarter">REVIEWS&lt;/h6>
         &lt;hr class="push-quarter">
         &lt;div class="push-double">
@@ -2658,18 +2663,17 @@ Can be used in the footer.</p>
           &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#review-star"/>&lt;/svg>&lt;/i>
           &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#review-star"/>&lt;/svg>&lt;/i>
         &lt;/div>
-      &lt;/section>
-      &lt;section class="description">
+      &lt;/div>
+      &lt;div class="description">
         &lt;h6 class="bold push-quarter">DESCRIPTION&lt;/h6>
         &lt;hr class="push-quarter">
         &lt;p class="milli push">Vanilla Sweater made with 78% merino wool and 22% cashmere.&lt;br>Model is seen wearing Size Small.&lt;/p>
-      &lt;/section>
-      &lt;secion class="fabric-care">
+      &lt;/div>
+      &lt;div class="fabric-care">
         &lt;h6 class="bold push-quarter">FABRIC CARE&lt;/h6>
         &lt;hr class="push-quarter">
         &lt;p class="milli push">Machine Wash cold &lt;br> Dry lay flat&lt;/p>
-
-      &lt;/secion>
+      &lt;/div>
     &lt;/div>
   &lt;/div>
 
@@ -2778,7 +2782,6 @@ Can be used in the footer.</p>
       &lt;/div>
     &lt;/div>
   &lt;/div>
-  &lt;div>&lt;/div>
 &lt;/div>
 </pre></code>
             </div>
@@ -2840,7 +2843,7 @@ Can be used in the footer.</p>
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="sections-recommended-section-code-sample-copy-chunk">&lt;section class="recommended"&gt;
+              <code><pre id="sections-recommended-section-code-sample-copy-chunk">&lt;div class="recommended"&gt;
   &lt;div class="island-half">
     &lt;h6 class="bold push-half">YOU MAY ALSO LIKE&lt;/h6>
     &lt;div class="grid">
@@ -2849,10 +2852,11 @@ Can be used in the footer.</p>
       &lt;/div>
       &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-3 island-half">
         &lt;a href="#">&lt;img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of a girl in white sweater" alt="">
-        &lt;/a>&lt;/div>
+          &lt;/a>
+      &lt;/div>
     &lt;/div>
   &lt;/div>
-&lt;/section>
+&lt;/div>
 </pre></code>
             </div>
           </div>
@@ -2918,7 +2922,7 @@ Can be used in the footer.</p>
   &lt;hr class="push-quarter">
 
   &lt;div class="push-double">
-    &lt;div class="one-five-star" aria-describedby="Rating 1/5 stars">
+    &lt;div class="one-five-star" aria-label="Rating 1/5 stars">
       &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#full-review"/>&lt;/svg>&lt;/i>
       &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#review-star"/>&lt;/svg>&lt;/i>
       &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#review-star"/>&lt;/svg>&lt;/i>
@@ -2928,7 +2932,7 @@ Can be used in the footer.</p>
   &lt;/div>
 
   &lt;div class="push-double">
-    &lt;div class="two-five-star" aria-describedby="Rating 2/5 stars">
+    &lt;div class="two-five-star" aria-label="Rating 2/5 stars">
       &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#full-review"/>&lt;/svg>&lt;/i>
       &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#full-review"/>&lt;/svg>&lt;/i>
       &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#review-star"/>&lt;/svg>&lt;/i>
@@ -2938,7 +2942,7 @@ Can be used in the footer.</p>
   &lt;/div>
 
   &lt;div class="push-double">
-    &lt;div class="three-five-star" aria-describedby="Rating 3/5 stars">
+    &lt;div class="three-five-star" aria-label="Rating 3/5 stars">
       &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#full-review"/>&lt;/svg>&lt;/i>
       &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#full-review"/>&lt;/svg>&lt;/i>
       &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#full-review"/>&lt;/svg>&lt;/i>
@@ -2947,7 +2951,7 @@ Can be used in the footer.</p>
     &lt;/div>
   &lt;/div>
 
-  &lt;div class="push-double" aria-describedby="Rating 4/5 stars">
+  &lt;div class="push-double" aria-label="Rating 4/5 stars">
     &lt;div class="four-five-star">
       &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#full-review"/>&lt;/svg>&lt;/i>
       &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#full-review"/>&lt;/svg>&lt;/i>
@@ -2957,7 +2961,7 @@ Can be used in the footer.</p>
     &lt;/div>
   &lt;/div>
 
-  &lt;div class="push-double" aria-describedby="Rating 5/5 stars">
+  &lt;div class="push-double" aria-label="Rating 5/5 stars">
     &lt;div class="five-five-star">
       &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#full-review"/>&lt;/svg>&lt;/i>
       &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#full-review"/>&lt;/svg>&lt;/i>
@@ -2967,7 +2971,7 @@ Can be used in the footer.</p>
     &lt;/div>
   &lt;/div>
 
-  &lt;div class="push-double" aria-describedby="Rating 0/5 stars">
+  &lt;div class="push-double" aria-label="Rating 0/5 stars">
     &lt;div class="zero-five-star">
       &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#review-star"/>&lt;/svg>&lt;/i>
       &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#review-star"/>&lt;/svg>&lt;/i>
