--- a/patterns/footer/subscribe-footer.html
+++ b/patterns/footer/subscribe-footer.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-ca">
+
 <head>
   <meta charset="utf-8">
   <title>Banners</title>
@@ -8,23 +9,27 @@
   <link href="../../common/grid.css" rel="stylesheet">
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
-    <link href="../buttons/buttons.css" rel="stylesheet">
+  <link href="../buttons/buttons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
   <link href="footer.css" rel="stylesheet">
 </head>
+
 <body>
 
   <div class="subscribe">
     <form>
-      <label for="email">Email</label>
-      <input type="email" plaeholder="abc@gmail.com" id="email" required aria-describedby="email-error">
-      <button class="btn" type="submit">Subscribe</button>
-      <p class="error-message milli island-1-4 push-0" id="email-error">
-        <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#warning" /></svg></i>
-        <span class="icon-label">Please provide a properly formatted email address</span>
-      </p>
+      <div class="email">
+        <label for="email">Email</label>
+        <input type="email" id="email" required aria-describedby="email-error">
+        <p class="error-message milli island-1-4 push-0" id="email-error">
+          <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#warning" /></svg></i>
+          <span class="icon-label">Please provide a properly formatted email address</span>
+        </p>
+      </div>
+      <button class="btn inline-block" type="submit">Subscribe</button>
     </form>
   </div>
 
 </body>
+
 </html>
