--- a/patterns/sections/product-details.html
+++ b/patterns/sections/product-details.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Product page banner</title>
+  <title>Product details section</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -25,19 +25,19 @@
       <div class="unit xs-1 s-1 m-1-2 l-1-2 island-half">
         <h6 class="bold push-quarter text-center">VANILLA SWEATER</h6>
         <p class="kilo bold text-center">$52</p>
-        <section class="size">
+        <div class="size">
           <div class="grid text-center push-none">
             <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-              <a class="bold micro push-quarter black">SMALL</a>
+              <a class="bold micro push-quarter black" href="#">SMALL</a>
             </div>
             <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-              <a class="bold micro push-quarter black">MEDIUM</a>
+              <a class="bold micro push-quarter black" href="#">MEDIUM</a>
             </div>
             <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-              <a class="bold micro push-quarter black">LARGE</a>
+              <a class="bold micro push-quarter black" href="#">LARGE</a>
             </div>
             <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-              <a class="bold micro push-quarter black">X-LARGE</a>
+              <a class="bold micro push-quarter black" href="#">X-LARGE</a>
             </div>
           </div>
           <div class="grid text-center push-none">
@@ -45,27 +45,27 @@
               <a class="micro push-quarter grey text-center" href="#">Size Guide</a>
             </div>
           </div>
-        </section>
-        <section class="colour">
+        </div>
+        <div class="colour">
           <div class="grid text-center push-none">
             <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-              <a class="bold micro push-quarter black">BROWN</a>
+              <a class="bold micro push-quarter black" href="#">BROWN</a>
             </div>
             <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-              <a class="bold micro push-quarter black">WHITE</a>
+              <a class="bold micro push-quarter black" href="#">WHITE</a>
             </div>
           </div>
-        </section>
-        <section class="quantity">
+        </div>
+        <div class="quantity">
           <hr class="pad-top-quarter push-half">
           <p class="kilo bold text-center push-half">&nbsp; - &nbsp;&nbsp;&nbsp; 1 &nbsp;&nbsp;&nbsp; +&nbsp;</p>
           <hr class="push-half">
           <div class="text-center push">
             <a class="btn milli bold" href="#">ADD TO CART</a>
           </div>
-        </section>
+        </div>
 
-        <section class="reviews">
+        <div class="reviews">
           <h6 class="bold push-quarter">REVIEWS</h6>
           <hr class="push-quarter">
           <div class="push-double">
@@ -75,17 +75,17 @@
             <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
             <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
           </div>
-        </section>
-        <section class="description">
+        </div>
+        <div class="description">
           <h6 class="bold push-quarter">DESCRIPTION</h6>
           <hr class="push-quarter">
           <p class="milli push">Vanilla Sweater made with 78% merino wool and 22% cashmere.<br>Model is seen wearing Size Small.</p>
-        </section>
-        <secion class="fabric-care">
+        </div>
+        <div class="fabric-care">
           <h6 class="bold push-quarter">FABRIC CARE</h6>
           <hr class="push-quarter">
           <p class="milli push">Machine Wash cold <br> Dry lay flat</p>
-          </section>
+        </div>
       </div>
     </div>
 
