--- a/patterns/sections/products.html
+++ b/patterns/sections/products.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Product collections page banner</title>
+  <title>Product Section</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -60,7 +60,7 @@
         </div>
       </div>
     </div>
-    <div>
+  </div>
 
 </body>
 </html>
