--- a/patterns/sections/recommended-section.html
+++ b/patterns/sections/recommended-section.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Product page banner</title>
+  <title>Recommended section</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <section class="recommended">
+  <div class="recommended">
     <div class="island-half">
       <h6 class="bold push-half">YOU MAY ALSO LIKE</h6>
       <div class="grid">
@@ -24,10 +24,11 @@
         </div>
         <div class="unit xs-1-2 s-1-2 m-1-2 l-1-3 island-half">
           <a href="#"><img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of a girl in white sweater" alt="">
-        </div></a>
+          </a>
         </div>
       </div>
-  </section>
+    </div>
+  </div>
 
 </body>
 
