--- a/patterns/footer/main-footer.html
+++ b/patterns/footer/main-footer.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Mian Footer</title>
+  <title>Main Footer</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -14,24 +14,24 @@
 <body>
 
   <div class="footer">
-    <div class="links">
-      <ul class="block list-group">
-        <li class="left block gutter milli">
+    <div class="links pad-t-2 push">
+      <ul class="list-group island clearfix text-center">
+        <li class="gutter milli">
           <a href="#">About</a>
         </li>
-        <li class="left block gutter milli">
+        <li class="gutter milli text-center">
           <a href="#">Terms & Conditions</a>
         </li>
-        <li class="left block gutter milli">
+        <li class="gutter milli text-center">
           <a href="#">Privacy Policy</a>
         </li>
-        <li class="right gutter milli">
+        <li class="gutter milli text-center">
           <a href="#">Shipping info</a>
         </li>
-        <li class="right gutter milli">
+        <li class="gutter milli text-center">
           <a href="#">Returns/Exchanges</a>
         </li>
-        <li class="right gutter milli">
+        <li class="gutter milli text-center">
           <a href="#">Contact</a>
         </li>
       </ul>
