--- a/patterns/header/header.html
+++ b/patterns/header/header.html
@@ -15,9 +15,9 @@
 
 <body>
 
-  <main>
+  <main class="header">
     <div class="logo">
-      <div class="absolute pin-tl">
+      <div class="left">
         <a href="#">
           <img class="island main-logo" src="../../images/logo-64.svg" alt="">
         </a>
@@ -26,17 +26,17 @@
     <div class="navigation">
       <nav>
         <input type="checkbox" class="nav-check" id="nav-check">
-        <label class="nav-label island absolute pin-tr" for="nav-check">
+        <label class="nav-label gutter pad-t-2 right" for="nav-check">
           <svg class="i-32 open"><use xlink:href="../../images/icons.svg#togglenav" /></svg>
           <svg class="i-32 close"><use xlink:href="../../images/icons.svg#close" /></svg>
         </label>
         <ul class="nav list-group island">
-          <li class="list-group-item text-center pad-t-1-2"><a aria-label="Click for women's clothing" class="tera text-center" href="#">Women</a></li>
-          <li class="list-group-item text-center pad-top-half"><a aria-label="Click for men's clothing" class="tera text-center" href="#">Men</a></li>
-          <li class="list-group-item text-center pad-top-half"><a aria-label="Click for gender neutral clothing" class="tera text-center" href="#">Gender Bender</a></li>
-          <li class="list-group-item text-center pad-top-half"><a aria-label="Click for accessories" class="tera text-center" href="#">Accessories</a></li>
-          <li class="list-group-item text-center pad-top-half"><a aria-label="Click for the list of brands" class="tera text-center" href="#">Brands</a></li>
-          <li class="list-group-item text-center pad-top-half"><a aria-label="Click to go to the cart" class="tera text-center" href="#">Cart</a></li>
+          <li class="list-group-item text-center pad-t-1-2"><a aria-label="Click for women's clothing" class="tera text-center yellow" href="#">Women</a></li>
+          <li class="list-group-item text-center pad-top-half"><a aria-label="Click for men's clothing" class="tera text-center yellow" href="#">Men</a></li>
+          <li class="list-group-item text-center pad-top-half"><a aria-label="Click for gender neutral clothing" class="tera text-center yellow" href="#">Gender Bender</a></li>
+          <li class="list-group-item text-center pad-top-half"><a aria-label="Click for accessories" class="tera text-center yellow" href="#">Accessories</a></li>
+          <li class="list-group-item text-center pad-top-half"><a aria-label="Click for the list of brands" class="tera text-center yellow" href="#">Brands</a></li>
+          <li class="list-group-item text-center pad-top-half"><a aria-label="Click to go to the cart" class="tera text-center yellow" href="#">Cart</a></li>
 
         </ul>
       </nav>
