--- a/patterns/banners/main-banners.html
+++ b/patterns/banners/main-banners.html
@@ -13,12 +13,14 @@
 </head>
 <body>
 
-  <div class="home-banner">
-    <div class="main-img">
-      <h1 class="text-s text-m text-l">Think food.</h1>
-      <img class="img-flex" src="../../images/banner.jpg" aria-label="Image of a girl in red graphic t-shirt that reads Tomato soup" alt="">
+  <div class="home-banner push-double">
+    <div class="main-img relative">
+      <div class="text-s text-m text-l">
+        <h1 class="push-none">Think food.</h1>
+      </div>
+      <img class="banner-img" src="../../images/banner.jpg" aria-label="Image of a girl in red graphic t-shirt that reads Tomato soup" alt="">
     </div>
-    <p class="l-home-banner-text gutter giga pad-top bold">JUNK TRUNK is a quirky clothing store for the foodies amongst us. Wear your favourite dish. </p>
+    <p class="wrapper max-length gutter mega pad-t-2 bold">JUNK TRUNK is a quirky clothing store for the foodies amongst us. Wear your favourite dish. </p>
   </div>
 
 </body>
