Add social media icons to the home page
Social media icons were added to the home page

--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="banners-main-banners-code-sample-copy-chunk">&lt;div class="home-banner push-double"&gt;
+              <code><pre id="banners-main-banners-code-sample-copy-chunk">&lt;div class="home-banner push-double" role="banner"&gt;
   &lt;div class="main-img relative">
     &lt;div class="text-s text-m text-l">
       &lt;h1 class="push-none">Think food.&lt;/h1>
@@ -1288,26 +1288,37 @@ Use the footer pattern on all pages.</p>
               </button>
               <code><pre id="footer-main-footer-code-sample-copy-chunk">&lt;div class="footer"&gt;
   &lt;div class="links pad-t-2 push">
-    &lt;ul class="list-group island clearfix text-center">
-      &lt;li class="gutter milli">
+    &lt;ul class="list-group-inline island clearfix text-center">
+      &lt;li class="gutter milli bold">
         &lt;a href="#">About&lt;/a>
       &lt;/li>
-      &lt;li class="gutter milli text-center">
+      &lt;li class="gutter milli bold text-center">
         &lt;a href="#">Terms &amp; Conditions&lt;/a>
       &lt;/li>
-      &lt;li class="gutter milli text-center">
+      &lt;li class="gutter milli bold text-center">
         &lt;a href="#">Privacy Policy&lt;/a>
       &lt;/li>
-      &lt;li class="gutter milli text-center">
+      &lt;li class="gutter milli bold text-center">
         &lt;a href="#">Shipping info&lt;/a>
       &lt;/li>
-      &lt;li class="gutter milli text-center">
+      &lt;li class="gutter milli bold text-center">
         &lt;a href="#">Returns/Exchanges&lt;/a>
       &lt;/li>
-      &lt;li class="gutter milli text-center">
+      &lt;li class="gutter milli bold text-center">
         &lt;a href="#">Contact&lt;/a>
       &lt;/li>
     &lt;/ul>
+  &lt;/div>
+  &lt;div class="social-media-icons text-center">
+    &lt;a href="#">
+      &lt;svg class="i-32 open">&lt;use xlink:href="../../images/icons.svg#instagram" />&lt;/svg>
+    &lt;/a>
+    &lt;a href="#">
+      &lt;svg class="i-32 open">&lt;use xlink:href="../../images/icons.svg#twitter" />&lt;/svg>
+    &lt;/a>
+    &lt;a href="#">
+      &lt;svg class="i-32 open">&lt;use xlink:href="../../images/icons.svg#fb" />&lt;/svg>
+    &lt;/a>
   &lt;/div>
   &lt;div class="copyright">
     &lt;a class="block text-center milli" href="index.html">www.junktrunk.ca&lt;/a>
@@ -2164,7 +2175,7 @@ Use the header pattern on all pages.</p>
     &lt;/div>
   &lt;/div>
   &lt;div class="navigation">
-    &lt;nav>
+    &lt;nav id="nav">
       &lt;input type="checkbox" class="nav-check" id="nav-check">
       &lt;label class="nav-label gutter pad-t-2 right" for="nav-check">
         &lt;svg class="i-32 open">&lt;use xlink:href="../../images/icons.svg#togglenav" />&lt;/svg>
