--- a/patterns/footer/main-footer.html
+++ b/patterns/footer/main-footer.html
@@ -15,26 +15,37 @@
 
   <div class="footer">
     <div class="links pad-t-2 push">
-      <ul class="list-group island clearfix text-center">
-        <li class="gutter milli">
+      <ul class="list-group-inline island clearfix text-center">
+        <li class="gutter milli bold">
           <a href="#">About</a>
         </li>
-        <li class="gutter milli text-center">
+        <li class="gutter milli bold text-center">
           <a href="#">Terms & Conditions</a>
         </li>
-        <li class="gutter milli text-center">
+        <li class="gutter milli bold text-center">
           <a href="#">Privacy Policy</a>
         </li>
-        <li class="gutter milli text-center">
+        <li class="gutter milli bold text-center">
           <a href="#">Shipping info</a>
         </li>
-        <li class="gutter milli text-center">
+        <li class="gutter milli bold text-center">
           <a href="#">Returns/Exchanges</a>
         </li>
-        <li class="gutter milli text-center">
+        <li class="gutter milli bold text-center">
           <a href="#">Contact</a>
         </li>
       </ul>
+    </div>
+    <div class="social-media-icons text-center">
+      <a href="#">
+        <svg class="i-32 open"><use xlink:href="../../images/icons.svg#instagram" /></svg>
+      </a>
+      <a href="#">
+        <svg class="i-32 open"><use xlink:href="../../images/icons.svg#twitter" /></svg>
+      </a>
+      <a href="#">
+        <svg class="i-32 open"><use xlink:href="../../images/icons.svg#fb" /></svg>
+      </a>
     </div>
     <div class="copyright">
       <a class="block text-center milli" href="index.html">www.junktrunk.ca</a>
