--- a/patterns/header/header.html
+++ b/patterns/header/header.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="navigation">
-      <nav>
+      <nav id="nav">
         <input type="checkbox" class="nav-check" id="nav-check">
         <label class="nav-label gutter pad-t-2 right" for="nav-check">
           <svg class="i-32 open"><use xlink:href="../../images/icons.svg#togglenav" /></svg>
