--- a/patterns/banners/main-banners.html
+++ b/patterns/banners/main-banners.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-  <div class="home-banner push-double">
+  <div class="home-banner push-double" role="banner">
     <div class="main-img relative">
       <div class="text-s text-m text-l">
         <h1 class="push-none">Think food.</h1>
