Add aria labels to images and icons
ARIA labels were added to images and icons for improved accessibility

--- a/index.html
+++ b/index.html
@@ -1311,13 +1311,13 @@ Use the footer pattern on all pages.</p>
   &lt;/div>
   &lt;div class="social-media-icons text-center">
     &lt;a href="#">
-      &lt;svg class="i-32 open">&lt;use xlink:href="../../images/icons.svg#instagram" />&lt;/svg>
+      &lt;svg class="i-32 open">&lt;use xlink:href="../../images/icons.svg#instagram" aria-label="Instagram icon" />&lt;/svg>
     &lt;/a>
     &lt;a href="#">
-      &lt;svg class="i-32 open">&lt;use xlink:href="../../images/icons.svg#twitter" />&lt;/svg>
+      &lt;svg class="i-32 open">&lt;use xlink:href="../../images/icons.svg#twitter" aria-label="Twitter icon" />&lt;/svg>
     &lt;/a>
     &lt;a href="#">
-      &lt;svg class="i-32 open">&lt;use xlink:href="../../images/icons.svg#fb" />&lt;/svg>
+      &lt;svg class="i-32 open">&lt;use xlink:href="../../images/icons.svg#fb" aria-label="Facebook icon" />&lt;/svg>
     &lt;/a>
   &lt;/div>
   &lt;div class="copyright">
@@ -2170,7 +2170,7 @@ Use the header pattern on all pages.</p>
   &lt;div class="logo">
     &lt;div class="left">
       &lt;a href="#">
-          &lt;img class="island main-logo" src="../../images/logo-64.svg" alt="">
+          &lt;img class="island main-logo" src="../../images/logo-64.svg" aria-label="Logo of the brand" alt="">
         &lt;/a>
     &lt;/div>
   &lt;/div>
@@ -2178,11 +2178,11 @@ Use the header pattern on all pages.</p>
     &lt;nav id="nav">
       &lt;input type="checkbox" class="nav-check" id="nav-check">
       &lt;label class="nav-label gutter pad-t-2 right" for="nav-check">
-        &lt;svg class="i-32 open">&lt;use xlink:href="../../images/icons.svg#togglenav" />&lt;/svg>
-        &lt;svg class="i-32 close">&lt;use xlink:href="../../images/icons.svg#close" />&lt;/svg>
+        &lt;svg class="i-32 open">&lt;use xlink:href="../../images/icons.svg#togglenav" aria-label="Toggle navigation icon" />&lt;/svg>
+        &lt;svg class="i-32 close">&lt;use xlink:href="../../images/icons.svg#close" aria-label="Toggle navigation close icon" />&lt;/svg>
       &lt;/label>
       &lt;ul class="nav list-group island">
-        &lt;li class="list-group-item text-center pad-t-1-2">&lt;a aria-label="Click for women&apos;s clothing" class="tera text-center yellow" href="#">Women&lt;/a>&lt;/li>
+        &lt;li class="list-group-item text-center pad-t-1-2">&lt;a aria-label="Click for women&apos;s clothing" class="tera text-center yellow current" href="#">Women&lt;/a>&lt;/li>
         &lt;li class="list-group-item text-center pad-top-half">&lt;a aria-label="Click for men&apos;s clothing" class="tera text-center yellow" href="#">Men&lt;/a>&lt;/li>
         &lt;li class="list-group-item text-center pad-top-half">&lt;a aria-label="Click for gender neutral clothing" class="tera text-center yellow" href="#">Gender Bender&lt;/a>&lt;/li>
         &lt;li class="list-group-item text-center pad-top-half">&lt;a aria-label="Click for accessories" class="tera text-center yellow" href="#">Accessories&lt;/a>&lt;/li>
