--- a/patterns/header/header.html
+++ b/patterns/header/header.html
@@ -19,7 +19,7 @@
     <div class="logo">
       <div class="left">
         <a href="#">
-          <img class="island main-logo" src="../../images/logo-64.svg" alt="">
+          <img class="island main-logo" src="../../images/logo-64.svg" aria-label="Logo of the brand" alt="">
         </a>
       </div>
     </div>
@@ -27,11 +27,11 @@
       <nav id="nav">
         <input type="checkbox" class="nav-check" id="nav-check">
         <label class="nav-label gutter pad-t-2 right" for="nav-check">
-          <svg class="i-32 open"><use xlink:href="../../images/icons.svg#togglenav" /></svg>
-          <svg class="i-32 close"><use xlink:href="../../images/icons.svg#close" /></svg>
+          <svg class="i-32 open"><use xlink:href="../../images/icons.svg#togglenav" aria-label="Toggle navigation icon" /></svg>
+          <svg class="i-32 close"><use xlink:href="../../images/icons.svg#close" aria-label="Toggle navigation close icon" /></svg>
         </label>
         <ul class="nav list-group island">
-          <li class="list-group-item text-center pad-t-1-2"><a aria-label="Click for women's clothing" class="tera text-center yellow" href="#">Women</a></li>
+          <li class="list-group-item text-center pad-t-1-2"><a aria-label="Click for women's clothing" class="tera text-center yellow current" href="#">Women</a></li>
           <li class="list-group-item text-center pad-top-half"><a aria-label="Click for men's clothing" class="tera text-center yellow" href="#">Men</a></li>
           <li class="list-group-item text-center pad-top-half"><a aria-label="Click for gender neutral clothing" class="tera text-center yellow" href="#">Gender Bender</a></li>
           <li class="list-group-item text-center pad-top-half"><a aria-label="Click for accessories" class="tera text-center yellow" href="#">Accessories</a></li>
