Make changes to fix the header
Max width on the header created an unneccessary space around the logo making it difficult for the succeeding elements to wrap. Max width was removed.
Also a new page for the products was added

--- a/patterns/navigation/filter.html
+++ b/patterns/navigation/filter.html
@@ -20,7 +20,7 @@
     <div class="filter-options">
 
       <div class="island-quarter text-center">
-        <div class="filter-option-1 island guuter-double">
+        <div class="filter-option-1 island-quarter gutter-double">
           <a class="drop-button" href="#">Filter 1</a>
           <div class="dropdown-content">
             <a href="#" aria-label="option 1">option-1</a>
@@ -28,7 +28,7 @@
             <a href="#" aria-label="option 3">option-3</a>
           </div>
         </div>
-        <div class="filter-option-2 island guuter-double">
+        <div class="filter-option-2 island-quarter gutter-double">
           <a class="drop-button" href="#">Filter 2</a>
           <div class="dropdown-content">
             <a href="#" aria-label="option 1">option-1</a>
@@ -36,7 +36,7 @@
             <a href="#" aria-label="option 3">option-3</a>
           </div>
         </div>
-        <div class="filter-option-3 island guuter-double">
+        <div class="filter-option-3 island-quarter gutter-double">
           <a class="drop-button" href="#">Filter 3</a>
           <div class="dropdown-content">
             <a href="#" aria-label="option 1">option-1</a>
