--- a/index.html
+++ b/index.html
@@ -241,6 +241,16 @@
                   </div>
                 </a>
               </li>
+              <li>
+                <a class="gutter pad-t-1-4 pad-b-1-4 block page-pop" href="pages/product-list-page.html" target="_blank">
+                  <div class="relative">
+                    <span>Product list page</span>
+                    <i class="icon i-18 absolute pin-cr">
+                      <svg><use xlink:href="#icon-pop-out" /></svg>
+                    </i>
+                  </div>
+                </a>
+              </li>
           </ul>
         </nav>
     </header>
@@ -2166,13 +2176,11 @@ Use the header pattern on all pages.</p>
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="header-header-code-sample-copy-chunk">&lt;main class="header"&gt;
-  &lt;div class="logo">
-    &lt;div class="left">
-      &lt;a href="#">
+              <code><pre id="header-header-code-sample-copy-chunk">&lt;main class="header clearfix"&gt;
+  &lt;div class="logo left">
+    &lt;a class="inline-block" href="#">
           &lt;img class="island main-logo" src="../../images/logo-64.svg" aria-label="Logo of the brand" alt="">
         &lt;/a>
-    &lt;/div>
   &lt;/div>
   &lt;div class="navigation">
     &lt;nav id="nav">
@@ -2287,7 +2295,7 @@ It can be used in the product page, collections page to sort/filter brands, pric
   &lt;div class="filter-options">
 
     &lt;div class="island-quarter text-center">
-      &lt;div class="filter-option-1 island guuter-double">
+      &lt;div class="filter-option-1 island-quarter gutter-double">
         &lt;a class="drop-button" href="#">Filter 1&lt;/a>
         &lt;div class="dropdown-content">
           &lt;a href="#" aria-label="option 1">option-1&lt;/a>
@@ -2295,7 +2303,7 @@ It can be used in the product page, collections page to sort/filter brands, pric
           &lt;a href="#" aria-label="option 3">option-3&lt;/a>
         &lt;/div>
       &lt;/div>
-      &lt;div class="filter-option-2 island guuter-double">
+      &lt;div class="filter-option-2 island-quarter gutter-double">
         &lt;a class="drop-button" href="#">Filter 2&lt;/a>
         &lt;div class="dropdown-content">
           &lt;a href="#" aria-label="option 1">option-1&lt;/a>
@@ -2303,7 +2311,7 @@ It can be used in the product page, collections page to sort/filter brands, pric
           &lt;a href="#" aria-label="option 3">option-3&lt;/a>
         &lt;/div>
       &lt;/div>
-      &lt;div class="filter-option-3 island guuter-double">
+      &lt;div class="filter-option-3 island-quarter gutter-double">
         &lt;a class="drop-button" href="#">Filter 3&lt;/a>
         &lt;div class="dropdown-content">
           &lt;a href="#" aria-label="option 1">option-1&lt;/a>
@@ -2768,10 +2776,10 @@ Can be used in the footer.</p>
                 </i>
               </button>
               <code><pre id="sections-products-code-sample-copy-chunk">&lt;div class="products-banner"&gt;
-  &lt;div class="grid">
+  &lt;div class="grid pad-top">
     &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
       &lt;div>
-        &lt;img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
+        &lt;img class="img-flex product-1" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
       &lt;/div>
       &lt;div class="grid pad-top-half">
         &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
@@ -2785,7 +2793,7 @@ Can be used in the footer.</p>
 
     &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
       &lt;div>
-        &lt;img class="img-flex" src="../../images/img-2.jpg" aria-label="Image of girl in BLUE sweater" alt="">
+        &lt;img class="img-flex product-2" src="../../images/img-2.jpg" aria-label="Image of girl in BLUE sweater" alt="">
       &lt;/div>
       &lt;div class="grid pad-top-half">
         &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
@@ -2799,7 +2807,7 @@ Can be used in the footer.</p>
 
     &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
       &lt;div>
-        &lt;img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
+        &lt;img class="img-flex product-3" src="../../images/img-3.jpg" aria-label="Image of girl in white sweater" alt="">
       &lt;/div>
       &lt;div class="grid pad-top-half">
         &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
