--- a/patterns/header/header.html
+++ b/patterns/header/header.html
@@ -15,13 +15,11 @@
 
 <body>
 
-  <main class="header">
-    <div class="logo">
-      <div class="left">
-        <a href="#">
+  <main class="header clearfix">
+    <div class="logo left">
+        <a class="inline-block" href="#">
           <img class="island main-logo" src="../../images/logo-64.svg" aria-label="Logo of the brand" alt="">
         </a>
-      </div>
     </div>
     <div class="navigation">
       <nav id="nav">
