--- a/patterns/sections/products.html
+++ b/patterns/sections/products.html
@@ -17,10 +17,10 @@
 
 <body>
   <div class="products-banner">
-    <div class="grid">
+    <div class="grid pad-top">
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
         <div>
-          <img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
+          <img class="img-flex product-1" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
@@ -34,7 +34,7 @@
 
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
         <div>
-          <img class="img-flex" src="../../images/img-2.jpg" aria-label="Image of girl in BLUE sweater" alt="">
+          <img class="img-flex product-2" src="../../images/img-2.jpg" aria-label="Image of girl in BLUE sweater" alt="">
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
@@ -48,7 +48,7 @@
 
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
         <div>
-          <img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
+          <img class="img-flex product-3" src="../../images/img-3.jpg" aria-label="Image of girl in white sweater" alt="">
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
