Add JS for filters
JS was added for filters and new section to accomodate that was added

--- a/patterns/sections/products.html
+++ b/patterns/sections/products.html
@@ -24,10 +24,10 @@
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-            <p class="milli bold">VANILLA SWEATER</p>
+            <p class="milli bold product-name-1">VANILLA SWEATER</p>
           </div>
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-            <p class="milli bold right">$32</p>
+            <p class="milli bold right product-price-1">$32</p>
           </div>
         </div>
       </div>
@@ -38,10 +38,10 @@
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-            <p class="milli bold">BLUE CHEESE SWEATER</p>
+            <p class="milli bold product-name-2">BLUE CHEESE SWEATER</p>
           </div>
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-            <p class="milli bold right">$45–$79</p>
+            <p class="milli bold right product-price-2">$49</p>
           </div>
         </div>
       </div>
@@ -52,10 +52,10 @@
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-            <p class="milli bold">VANILLA SWEATER</p>
+            <p class="milli bold product-name-3">VANILLA SWEATER</p>
           </div>
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-            <p class="milli bold right">$32</p>
+            <p class="milli bold right product-price-3">$32</p>
           </div>
         </div>
       </div>
