--- a/index.html
+++ b/index.html
@@ -2418,6 +2418,7 @@ Can be used in the footer.</p>
         <ol class="list-group-inline push-1-4 pad-b-1-4">
             <li><a href="#sections--collection">Collection</a></li>
             <li><a href="#sections--colour-picker">Colour picker</a></li>
+            <li><a href="#sections--filter-section">Filter section</a></li>
             <li><a href="#sections--product-details">Product details</a></li>
             <li><a href="#sections--products">Products</a></li>
             <li><a href="#sections--recommended-section">Recommended section</a></li>
@@ -2581,6 +2582,253 @@ Can be used in the footer.</p>
     &lt;/div>
   &lt;/div>
 &lt;/section>
+</pre></code>
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="pattern-details " id="sections--filter-section" style="">
+        <div class="pattern-toolbar pattern-toolbar-inner relative gutter pad-t-1-4 pad-b-1-4" style="">
+          <h3 class="pattern-name tera push-1-8">Filter section</h3>
+            <ul class="list-group-inline gutter absolute pin-cr">
+                <li>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="sections-filter-section-code-sample">
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-code"></use></svg>
+                    </i>
+                  </button>
+                </li>
+                <li>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-include-btn" title="Copy include" aria-label="Copy include" data-copy-include-pattern="sections/filter-section" hidden>
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-copy"></use></svg>
+                    </i>
+                  </button>
+                </li>
+                <li>
+                  <a class="btn center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/sections/filter-section.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-pop-out"></use></svg>
+                    </i>
+                  </a>
+                </li>
+            </ul>
+        </div>
+
+      <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
+        <div class="gutter-2 pad-t-1-2 pad-b-1-2">
+          <div class="resizeable-pattern relative" style="">
+            <i class="icon i-32 patternbot-iframe-loading-gears absolute pin-c"><svg><use xlink:href="#patternbot-iframe-loading-gears"></use></svg></i>
+            <iframe data-src="patterns/sections/filter-section.html" scrolling="no" data-inject-css=" " ></iframe>
+              <div class="resizeable-pattern-length">
+                <div class="resize-handle resize-handle-left" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+                <div class="resize-handle resize-handle-right" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+              </div>
+          </div>
+        </div>
+
+          <div class="pattern-code-wrap gutter pad-t-1-2 pad-b-1-2" hidden aria-hidden="true" id="sections-filter-section-code-sample" tabindex="-1">
+            <div class="pattern-code relative milli island-1-2" style="">
+              <button class="center-contents-vertical pattern-tool-btn pattern-copy-btn absolute pin-tr" title="Copy code" aria-label="Copy code" data-clipboard-target="#sections-filter-section-code-sample-copy-chunk" hidden>
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-copy"></use></svg>
+                </i>
+              </button>
+              <code><pre id="sections-filter-section-code-sample-copy-chunk">&lt;section class="filter-header"&gt;
+  &lt;hr class="push-quarter">
+
+  &lt;div class="filter-options clearfix">
+    &lt;div class="island-quarter inline-block right">
+
+      &lt;div class="filter-option-1 island-quarter gutter-double inline-block">
+        &lt;a class="drop-button-brand bold" href="#">Brands&lt;/a>
+        &lt;div class="dropdown-content-brand">
+          &lt;div class="block">
+            &lt;input type="checkbox" id="brand-check1">
+            &lt;label class="gutter-half bold" for="brand-check1">Friut&lt;/label>
+          &lt;/div>
+          &lt;div class="block">
+            &lt;input type="checkbox" id="brand-check2">
+            &lt;label class="gutter-half bold" for="brand-check2">Suop&lt;/label>
+          &lt;/div>
+          &lt;div class="block">
+            &lt;input type="checkbox" id="brand-check3">
+            &lt;label class="gutter-half bold" for="brand-check3">Ceka&lt;/label>
+          &lt;/div>
+        &lt;/div>
+      &lt;/div>
+
+      &lt;div class="filter-option-2 island-quarter gutter-double inline-block">
+        &lt;a class="drop-button-type bold" href="#">Clothing type&lt;/a>
+        &lt;div class="dropdown-content-type">
+          &lt;div class="block">
+            &lt;input type="checkbox" id="type-check1">
+            &lt;label class="gutter-half bold " for="type-check1">Jackets&lt;/label>
+          &lt;/div>
+          &lt;div class="block">
+            &lt;input type="checkbox" id="type-check2">
+            &lt;label class="gutter-half bold " for="type-check2">Pants&lt;/label>
+          &lt;/div>
+          &lt;div class="block">
+            &lt;input type="checkbox" id="type-check3">
+            &lt;label class="gutter-half bold " for="type-check3">Sweaters&lt;/label>
+          &lt;/div>
+          &lt;div class="block">
+            &lt;input type="checkbox" id="type-check4">
+            &lt;label class="gutter-half bold " for="type-check4">Skirts&lt;/label>
+          &lt;/div>
+          &lt;div class="block">
+            &lt;input type="checkbox" id="type-check5">
+            &lt;label class="gutter-half bold " for="type-check5">Tops&lt;/label>
+          &lt;/div>
+        &lt;/div>
+      &lt;/div>
+
+
+    &lt;/div>
+
+  &lt;/div>
+  &lt;hr class="push-quarter">
+
+&lt;/section>
+
+&lt;div class="products-banner">
+  &lt;div class="grid pad-top">
+    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-1">
+      &lt;div>
+        &lt;img class="img-flex product-1" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
+      &lt;/div>
+      &lt;div class="grid pad-top-half">
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold product-name-1">VANILLA SWEATER&lt;/p>
+        &lt;/div>
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold right product-price-1">$32&lt;/p>
+        &lt;/div>
+      &lt;/div>
+    &lt;/div>
+
+    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-2">
+      &lt;div>
+        &lt;img class="img-flex product-2" src="../../images/img-2.jpg" aria-label="Image of girl in BLUE sweater" alt="">
+      &lt;/div>
+      &lt;div class="grid pad-top-half">
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold product-name-2">BLUE CHEESE SWEATER&lt;/p>
+        &lt;/div>
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold right product-price-2">$49&lt;/p>
+        &lt;/div>
+      &lt;/div>
+    &lt;/div>
+
+    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-3">
+      &lt;div>
+        &lt;img class="img-flex product-3" src="../../images/img-3.jpg" aria-label="Image of girl in white sweater" alt="">
+      &lt;/div>
+      &lt;div class="grid pad-top-half">
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold product-name-3">ORANGE BLOUSE&lt;/p>
+        &lt;/div>
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold right product-price-3">$46&lt;/p>
+        &lt;/div>
+      &lt;/div>
+    &lt;/div>
+
+    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-4">
+      &lt;div>
+        &lt;img class="img-flex product-3" src="../../images/img-4.jpg" aria-label="Image of girl in white sweater" alt="">
+      &lt;/div>
+      &lt;div class="grid pad-top-half">
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold product-name-4">VANILLA SWEATER&lt;/p>
+        &lt;/div>
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold right product-price-4">$79&lt;/p>
+        &lt;/div>
+      &lt;/div>
+    &lt;/div>
+
+    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-5">
+      &lt;div>
+        &lt;img class="img-flex product-3" src="../../images/img-5.jpg" aria-label="Image of girl in white sweater" alt="">
+      &lt;/div>
+      &lt;div class="grid pad-top-half">
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold product-name-5">WHITE ROUND-NECK&lt;/p>
+        &lt;/div>
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold right product-price-5">$36&lt;/p>
+        &lt;/div>
+      &lt;/div>
+    &lt;/div>
+
+    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-6">
+      &lt;div>
+        &lt;img class="img-flex product-3" src="../../images/img-6.jpg" aria-label="Image of girl in white sweater" alt="">
+      &lt;/div>
+      &lt;div class="grid pad-top-half">
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold product-name-6">CREAMY MUSHROOM TOP&lt;/p>
+        &lt;/div>
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold right product-price-6">$68&lt;/p>
+        &lt;/div>
+      &lt;/div>
+    &lt;/div>
+
+    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-7">
+      &lt;div>
+        &lt;img class="img-flex product-3" src="../../images/img-7.jpg" aria-label="Image of girl in white sweater" alt="">
+      &lt;/div>
+      &lt;div class="grid pad-top-half">
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold product-name-7">B&amp;W TOP&lt;/p>
+        &lt;/div>
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold right product-price-7">$42&lt;/p>
+        &lt;/div>
+      &lt;/div>
+    &lt;/div>
+
+    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-8">
+      &lt;div>
+        &lt;img class="img-flex product-3" src="../../images/img-8.jpg" aria-label="Image of girl in white sweater" alt="">
+      &lt;/div>
+      &lt;div class="grid pad-top-half">
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold product-name-8">MOCHA SWEATER&lt;/p>
+        &lt;/div>
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold right product-price-8">$72&lt;/p>
+        &lt;/div>
+      &lt;/div>
+    &lt;/div>
+
+    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-9">
+      &lt;div>
+        &lt;img class="img-flex product-3" src="../../images/img-9.jpg" aria-label="Image of girl in white sweater" alt="">
+      &lt;/div>
+      &lt;div class="grid pad-top-half">
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold product-name-9">TIRAMISU SWEATER&lt;/p>
+        &lt;/div>
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold right product-price-9">$119&lt;/p>
+        &lt;/div>
+      &lt;/div>
+    &lt;/div>
+  &lt;/div>
+&lt;/div>
 </pre></code>
             </div>
           </div>
@@ -2783,10 +3031,10 @@ Can be used in the footer.</p>
       &lt;/div>
       &lt;div class="grid pad-top-half">
         &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold">VANILLA SWEATER&lt;/p>
+          &lt;p class="milli bold product-name-1">VANILLA SWEATER&lt;/p>
         &lt;/div>
         &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold right">$32&lt;/p>
+          &lt;p class="milli bold right product-price-1">$32&lt;/p>
         &lt;/div>
       &lt;/div>
     &lt;/div>
@@ -2797,10 +3045,10 @@ Can be used in the footer.</p>
       &lt;/div>
       &lt;div class="grid pad-top-half">
         &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold">BLUE CHEESE SWEATER&lt;/p>
+          &lt;p class="milli bold product-name-2">BLUE CHEESE SWEATER&lt;/p>
         &lt;/div>
         &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold right">$45&#x2013;$79&lt;/p>
+          &lt;p class="milli bold right product-price-2">$49&lt;/p>
         &lt;/div>
       &lt;/div>
     &lt;/div>
@@ -2811,10 +3059,10 @@ Can be used in the footer.</p>
       &lt;/div>
       &lt;div class="grid pad-top-half">
         &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold">VANILLA SWEATER&lt;/p>
+          &lt;p class="milli bold product-name-3">VANILLA SWEATER&lt;/p>
         &lt;/div>
         &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold right">$32&lt;/p>
+          &lt;p class="milli bold right product-price-3">$32&lt;/p>
         &lt;/div>
       &lt;/div>
     &lt;/div>
