--- a/pages/home.html
+++ b/pages/home.html
@@ -8,7 +8,11 @@
 </head>
 <body>
   <script type="application/json" data-pattern="banners/pop-up-banner"></script>
-  <script type="application/json" data-pattern="header/header"></script>
+  <script type="application/json" data-pattern="header/header">
+    {
+      ".current[class]": "tera text-center yellow"
+    }
+  </script>
   <script type="application/json" data-pattern="banners/main-banners"></script>
   <script type="application/json" data-pattern="sections/collection"></script>
   <script type="application/json" data-pattern="footer/main-footer"></script>
