Add a few changes

--- a/index.html
+++ b/index.html
@@ -2642,7 +2642,7 @@ Can be used in the footer.</p>
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="sections-filter-section-code-sample-copy-chunk">&lt;section class="filter-header"&gt;
+              <code><pre id="sections-filter-section-code-sample-copy-chunk">&lt;div class="filter-header"&gt;
   &lt;hr class="push-quarter">
 
   &lt;div class="filter-options clearfix">
@@ -2698,7 +2698,7 @@ Can be used in the footer.</p>
   &lt;/div>
   &lt;hr class="push-quarter">
 
-&lt;/section>
+&lt;/div>
 
 &lt;div class="products-banner">
   &lt;div class="grid pad-top">
