--- a/patterns/sections/filter-section.html
+++ b/patterns/sections/filter-section.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <section class="filter-header">
+  <div class="filter-header">
     <hr class="push-quarter">
 
     <div class="filter-options clearfix">
@@ -83,7 +83,7 @@
       </div>
     <hr class="push-quarter">
 
-  </section>
+  </div>
 
   <div class="products-banner">
     <div class="grid pad-top">
